// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyText オプション type type属性変更 1`] = `
Object {
  "class": "form-control",
  "id": "sample_field",
  "type": "password",
}
`;

exports[`MyText バリデーションエラー 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <input
      class="form-control is-invalid"
      id="sample_field"
      type="text"
    />
    <!---->
    <!---->
    <div
      class="invalid-feedback"
    >
      エラーです
    </div>
    <!---->
  </div>
</div>
`;

exports[`MyText 通常 表示 1`] = `
<div
  class="form-group form-row"
  role="group"
>
  <label
    class="col-form-label col-sm-3"
    for="sample_field"
  >
     サンプル 
  </label>
  <div
    class="col-sm-9"
  >
    <!---->
    <input
      class="form-control"
      id="sample_field"
      type="text"
    />
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
